# pcn-app-nanzhe

./: .env  .gitignore  assignment.json  index.html  package-lock.json  package.json  player.html  splashscreen.html  vite.config.ts
src/: App.css  App.tsx  styles.css
src-tauri/: .gitignore  Cargo.toml  assignment.json  tauri.conf.json
src-tauri/capabilities/: main.json  migrated.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_state.rs  assignment.rs  commands.rs  main.rs
src/index/: App.css  App.tsx  assignment.ts  index_main.tsx
src/index/pages/home-page/: home-page.css  index.tsx  left-bar.tsx
src/index/pages/video-page/: index.tsx  video-page.css
src/pages/config-page/: index.tsx
src/pages/home-page/: home-page.css  index.tsx  left-bar.tsx
src/pages/player-page/: index.tsx  player-page.css
src/pages/video-page/: index.tsx  video-page.css
src/player/: player.css  player.tsx  player_main.tsx
src/widgets/: AuthRoute.tsx
src/widgets/page/: index.tsx  page.css
src/widgets/scroll-box/: index.tsx  scroll-box.css
src/widgets/window/: index.tsx  window-control.css  window-controll.tsx  window.css  window.tsx
